--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -47,7 +47,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-a:hover, a:focus, a:active, a:visited {
+a, a:hover, a:focus, a:active, a:visited {
   color: black;
 }
 button {
