--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 // @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap');
 @import url(https://fonts.bunny.net/css?family=dekko:400|dongle:300,400,700|audiowide:400);
 
-$base-color: #fab;
+$base-color: #6d3359;
 $secondary-color: #420;
 $third-color: #696;
 
