--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,12 @@
 @import "variables";
 @import "header";
 @import "transition";
+@import "blog";
+
+h1, h2, h3 {
+  font-family: $header-font;
+  text-transform: uppercase;
+}
 
 body {
   background: $base-color;
