new and improved styling

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,9 +2,15 @@
 @import url(https://fonts.bunny.net/css?family=dekko:400|dongle:300,400,700|audiowide:400);
 @import url(https://fonts.bunny.net/css?family=anybody:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
 
-$base-color: #6d3359;
-$secondary-color: #420;
-$third-color: #696;
+// $base-color: #6d3359;
+// $secondary-color: #420;
+// $third-color: #696;
+
+$darkest: #141414;
+$dark: #1F1F1F;
+$silver: #A3A3A3;
+$whiteish: #EBEBEB;
+$purple: #6D3359;
 
 // $base-font: 'Comic Neue', cursive;
 $header-font: 'Audiowide', display;
