--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -9,6 +9,15 @@
   color: black;
   filter: drop-shadow(0 0 .25rem white);
 
+  .title {
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  .sub-title {
+    text-align: center;
+  }
+
   ul {
     list-style-type: square;
     list-style-position: inside;
