--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,37 +1,38 @@
 // I need a function that gets the height of the black trapezoid and white trapizoid
 $baseHeight: 50px;
 
-@mixin temp($isOutline) {
-  @if $isOutline {
-    border-image: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(46,46,46,1) 30%, rgba(28,28,28,1) 50%, rgba(46,46,46,1) 70%, rgba(0,0,0,1) 100%);
-    border-style: solid;
-    border-width: 50px;
-    // border-top: $baseHeight solid #000;
-    // border-left: $baseHeight+2px/2 solid transparent;
-    // border-right: $baseHeight+2px/2 solid transparent;
-    z-index: -2;
-  } @else {
-    // $baseHeight: $baseHeight - 5px;
-    // border-top: $baseHeight+2px solid #aaa;
-    // border-left: $baseHeight+2px/2 solid transparent;
-    // border-right: $baseHeight+2px/2 solid transparent;
-    // z-index: -1;
-  }
-
-  content: '';
-  top: 0;
-  left: 50%;
-  width: 75vw;
-  margin: auto;
-  position: absolute;
-  transform: translate(-50%);
-}
 
 // below 1024 use mobile
 $background: lightcoral;
-$easing: cubic-bezier(.25,1.7,.35,.8);
+$easing: cubic-bezier(.25, 1.7, .35, .8);
 $duration: 0.5s;
 $navIconWidth: 30px;
+$baseHeight: 50px;
+
+@mixin mobile-icon-bar($angle) {
+  position: absolute;
+  background-color: transparent;
+  top: 0;
+  left: 0;
+  width: $navIconWidth;
+  height: 10px;
+  display: block;
+  transform: rotate($angle);
+  float: right;
+  border-radius: 2px;
+
+  &:after {
+    content: "";
+    background-color: white;
+    width: $navIconWidth;
+    height: 10px;
+    display: block;
+    float: right;
+    border-radius: 6px 10px 10px 6px;
+    transition: all $duration $easing;
+    z-index: -1;
+  }
+}
 
 // Mobile dropdown icon
 .mobile-icon {
@@ -49,52 +50,14 @@ $navIconWidth: 30px;
   @media screen and (min-width: 1024px) {
     display: none;
   }
+
   .left-bar {
-    position: absolute;
-    background-color: transparent;
-    top: 0;
-    left:0;
-    width: $navIconWidth;
-    height: 10px;
-    display: block;
-    transform: rotate(35deg);
-    float: right;
-    border-radius: 2px;
-    &:after {
-      content:"";
-      background-color: white;
-      width: $navIconWidth;
-      height: 10px;
-      display: block;
-      float: right;
-      border-radius: 6px 10px 10px 6px;
-      transition: all $duration $easing;
-      z-index: -1;
-    }
+    @include mobile-icon-bar(35deg);
   }
   
   .right-bar {
-    position: absolute;
-    background-color: transparent;
-    top: 0px;
+    @include mobile-icon-bar(-35deg);
     left: 18px;
-    width: $navIconWidth;
-    height: 10px;
-    display: block;
-    transform: rotate(-35deg);
-    float: right;
-    border-radius: 2px;
-    &:after {
-      content:"";
-      background-color: white;
-      width: $navIconWidth;
-      height: 10px;
-      display: block;
-      float: right;
-      border-radius: 10px 6px 6px 10px;
-      transition: all $duration $easing;
-      z-index: -1;
-    }
   }
 }
 .open-nav {
@@ -102,6 +65,7 @@ $navIconWidth: 30px;
     transform-origin: center center;
     transform: rotate(-70deg);
   }
+
   .right-bar:after {
     transform-origin: center center;
     transform: rotate(70deg);
@@ -110,11 +74,12 @@ $navIconWidth: 30px;
 
 header {
   height: 3.5rem;
+
   @media screen and (min-width: 1024px) {
     position: sticky;
     top: 0;
-    display:flex;
-    overflow:hidden;
+    display: flex;
+    overflow: hidden;
     justify-content: center;
     height: 100px;
     filter: drop-shadow(0 0 .25rem $purple);
@@ -137,19 +102,14 @@ header {
   transition: height 1s;
   
   @media screen and (min-width: 1024px) {
+    font-size: 60px;
+    line-height: 60px;
     background: unset;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
     box-sizing: content-box;
-    height: 0;
-    border: 80px solid rgba(0,0,0,0);
-    border-top: 0 solid;
+    height: 50px;
+    border: 80px solid transparent;
     border-bottom: 100px solid $whiteish;
-    -webkit-border-radius: 20px 20px 0 0;
     border-radius: 20px 20px 0 0;
-    -o-text-overflow: clip;
-    text-overflow: clip;
-    -webkit-transform: rotateX(180deg);
     transform: rotateX(180deg);
     margin-top: -40px;
     width: 75vw;
@@ -166,6 +126,7 @@ header {
     justify-content: center;
     opacity: 1;
     transition: opacity .5s;
+    
     @media screen and (min-width: 1024px) {
       display: none;
     }
@@ -183,7 +144,9 @@ header {
     transition: top 1s;
   
     @media screen and (min-width: 1024px) {
-      top: 6.5vw;
+      // top: 6.5vw;
+      height: 0;
+      top: 125px;
       flex-direction: row;
       background: unset;
       -webkit-transform: rotateX(180deg);
