--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,29 +1,32 @@
-
+@import './mixins';
 
 .post_block {
-  background: white;
-  border-top: 5px solid $silver;
-  border-bottom: 5px solid $silver;
   margin-bottom: 5rem;
-  padding: 1rem;
   color: black;
   filter: drop-shadow(0 0 .25rem white);
+  text-align: center;
 
   .title {
-    text-align: center;
-    margin-bottom: 1rem;
+    @include trapezoid(5rem, 6.25rem, -96%, -7.5rem, $silver);
   }
 
-  .sub-title {
-    text-align: center;
+  .post_content {
+    position: relative;
+    background: $whiteish;
+    padding: 2rem;
+    text-align: left;
+    border-top: 0.25rem solid $silver;
+    z-index: -2;
   }
+}
 
-  ul {
-    list-style-type: square;
-    list-style-position: inside;
-    font-size: 1.5rem;
-    @media screen and (min-width: 1024px) {
-      font-size: 2rem;
-    }
+.player_block {
+  margin-bottom: 5rem;
+  color: black;
+  filter: drop-shadow(0 0 .25rem white);
+  text-align: center;
+
+  .IGN {
+    @include trapezoid(5rem, 6.25rem, -77%, -7.5rem, $silver);
   }
 }
