--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,5 +1,5 @@
 
-@mixin trapezoid($border-width, $border-bottom-width, $transform-y, $offset, $color) {
+@mixin trapezoid($border-width, $border-bottom-width, $transform-y-over, $transform-y-under, $offset, $color, $rotation) {
   position: relative;
   display: inline-block;
   cursor: pointer;
@@ -19,7 +19,7 @@
     left: $offset + 0.35rem;
     right: $offset + 0.35rem;
     height: 1.5rem;
-    transform: translate(0, $transform-y);
+    transform: translate(0, $transform-y-over) rotate($rotation);
     border: $border-width - 0.25rem solid transparent;
     border-top: none;
     border-bottom: $border-bottom-width - 0.25rem solid $whiteish;
@@ -29,7 +29,7 @@
     left: $offset;
     right: $offset;
     height: 0;
-    transform: translate(0, $transform-y);
+    transform: translate(0, $transform-y-under) rotate($rotation);
     border: $border-width solid transparent;
     border-top: none;
     border-bottom: $border-bottom-width solid $color;
