--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,8 +3,9 @@
 @import "header";
 @import "transition";
 @import "blog";
-@import 'mixins';
-@import 'roster';
+@import "mixins";
+@import "roster";
+@import "home";
 
 #{headings(1, 3)} {
   font-family: $header-font;
