--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -4,6 +4,7 @@
   position: relative;
   animation: slideIn 1s ease-out;
   justify-content: center;
+  margin: 4rem;
 }
 
 #welcome::after {
@@ -13,15 +14,7 @@
   right: 50%;
   width: 50%;
   height: 4px;
-  background: linear-gradient(
-    to right,
-    #A44FFF 0%,
-    #A44FFF 10%,
-    #6D3359 25%,
-    #6D3359 75%,
-    #A44FFF 90%,
-    #A44FFF 100%
-  );
+  background: $purple;
   transform: skewX(-20deg) translate(50%);
   transform-origin: left;
   box-shadow: 0 0 10px #a44fff;
@@ -29,9 +22,10 @@
 
 .tournaments-article {
   h2 {
-    @include trapezoid(5rem, 4.25rem, -95%, -94%, -7.5rem, $silver, 0deg, $purple);
+    @include trapezoid(5rem, 4.25rem, -95%, -94%, -7.5rem, -7.85rem, $silver, 0deg, $purple);
     margin: 3rem 2rem;
-    margin-bottom: -2px;
+    margin-bottom: 0;
+    margin-bottom: -1px;
     text-shadow: 0 0 10px black;
     z-index: 1;
   }
@@ -40,8 +34,42 @@
     background: $purple;
     text-shadow: 0 0 10px black;
     padding: 2rem;
-    border-top: $silver 5px solid;
-    border-bottom: $silver 5px solid;
+    border-top: $silver 4px solid;
+    border-bottom: $silver 4px solid;
+    box-shadow: 0 0 5px $silver;
+    margin-top: 0;
+    margin-top: -1px;
+
+    @media screen and (min-width: 1024px) {
+      margin-top: 1px;
+    }
+  }
+}
+
+.live-article {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  text-align: right;
+
+  h2 {
+    @include trapezoid(5rem, 4.25rem, -95%, -94%, -7.5rem, -7.85rem, $silver, 0deg, $purple);
+    text-shadow: 0 0 10px black;
+    width: fit-content;
+    align-self: end;
+    margin-right: 2rem;
+    margin-bottom: 0;
+    z-index: 1;
+    box-shadow: 0 0 5px $silver;
+  }
+
+  p {
+    background: $purple;
+    text-shadow: 0 0 10px black;
+    padding: 2rem;
+    border-top: $silver 4px solid;
+    border-bottom: $silver 4px solid;
     box-shadow: 0 0 5px $silver;
   }
 }
