small quality of life changes. Updated favicon. preconnect fonts. added aria labels

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 // @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap');
-@import url(https://fonts.bunny.net/css?family=dekko:400|dongle:300,400,700|audiowide:400);
-@import url(https://fonts.bunny.net/css?family=anybody:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
+// @import url(https://fonts.bunny.net/css?family=dekko:400|dongle:300,400,700|audiowide:400);
+// @import url(https://fonts.bunny.net/css?family=anybody:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i);
 
 // $base-color: #6d3359;
 // $secondary-color: #420;
