--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
 @import "mixins";
 @import "roster";
 @import "home";
+@import "footer";
 
 #{headings(1, 3)} {
   font-family: $header-font;
@@ -45,6 +46,11 @@ body {
   font-family: $base-font;
   font-size: 24px;
   color: $whiteish;
+}
+
+main {
+  min-height: calc(100vh - 171px);
+  overflow: hidden;
 }
 
 .box {
